# plonkup-aggregate

./: .gitignore  Cargo.toml  README.md
src/: error.rs  kzg.rs  lib.rs  proof.rs  prove.rs  srs.rs  transcript.rs  util.rs  verify.rs
src/commit/: lookup.rs  mod.rs  permutation.rs  wire.rs
